# code_review

./: .env  LICENSE  compose.yml  main.py  pyproject.toml
app/: worker.py
app/config/: settings.py
app/db/: __init__.py  session.py
app/i18n/: __init__.py  core.py
app/i18n/locales/en/: common.json
app/i18n/locales/ne/: common.json
app/middleware/: i18n.py
app/models/: project.py  user.py
app/routes/: user.py
app/schemas/: __init__.py  user.py
app/types/: __init__.py  common.py
app/utils/: encrypt_decrypt.py  queue.py  valkey.py
