[project]
name = "review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.27.0",
    "bcrypt>=5.0.0",
    "beanie>=2.0.1",
    "cryptography>=46.0.5",
    "email-validator>=2.2.0",
    "fastapi>=0.135.1",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pydash>=8.0.6",
    "uvicorn>=0.42.0",
    "valkey>=6.1.1",
]
